day33/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-deployment
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
